--- a/src/components/CartPannel/styles.module.scss
+++ b/src/components/CartPannel/styles.module.scss
@@ -8,7 +8,7 @@
     position: absolute;
     top: -15px;
     left: -15px;
-    background-color: lightgrey;
+    background-color: rgba(211, 211, 211, 0.767);
     color: black;
     border-radius: 50%;
     padding: 0.15em;
