--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -1,4 +1,4 @@
-@use "../../assets/styles/mixins" as mix;
+@use '../../assets/styles/mixins' as mix;
 
 .container {
   display: grid;
@@ -11,7 +11,7 @@
   }
 
   .header_container {
-    padding: 0.75em;
+    padding: 0.75em 1.25em;
     @include mix.flex-row-between-center;
     .header_left {
       @include mix.flex-row-start-center;
