breadcrumbs and some testing

--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -16,6 +16,9 @@
     .header_left {
       @include mix.flex-row-start-center;
       gap: 1em;
+      a:hover {
+        cursor: pointer;
+      }
     }
   }
 
