--- a/src/pages/ProductDetail/styles.module.scss
+++ b/src/pages/ProductDetail/styles.module.scss
@@ -9,6 +9,7 @@
   .content {
     margin: 1em;
     @include mix.flex-row-start;
+    flex-wrap: nowrap;
     gap: 1em;
 
     .product_images {
@@ -68,6 +69,12 @@
         gap: 1em;
         padding: 0.5em 0.75em;
       }
+    }
+  }
+
+  @media (max-width: 820px) {
+    .content {
+      flex-wrap: wrap;
     }
   }
 }
